[tool.poetry]
name = "corona-live-bot"
version = "1.0.0"
description = ""
authors = ["Muhwan Kim <mhkim4886@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"
"discord.py" = "^1.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
